fixed layout issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -166,10 +166,10 @@ textarea {
 }
 
 body {
-  -ms-overflow-style: scrollbar;
+  -ms-overflow-style: none;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1024px) {
   html,
   body {
     min-width: 320px;
@@ -178,6 +178,16 @@ body {
 
 html {
   box-sizing: border-box;
+}
+@media screen and (max-width: 768px) {
+  html {
+    box-sizing: border-box;
+  }
+}
+@media screen and (max-width: 480px) {
+  html {
+    box-sizing: border-box;
+  }
 }
 
 *,
@@ -1903,7 +1913,7 @@ hr.major {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: flex-start;*/
-  margin: 10px 70px;
+  /* margin: 10px 70px; */
   display: -moz-flex;
   display: -webkit-flex;
   display: -ms-flex;
@@ -1914,6 +1924,7 @@ hr.major {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-start;
+  width: 100%;
   /* border-radius: 0.25em; */
   /* border: solid 1px rgba(255, 255, 255, 0.15); */
   /* background: rgba(255, 255, 255, 0.05); */
@@ -1929,10 +1940,12 @@ hr.major {
     display: flex;
   }
 
-  .skills div {
+  .skills div img,
+  h4 {
     border-top-width: 1px !important;
     border-left-width: 0 !important;
     width: 100%;
+    margin: 0 auto;
   }
 }
 
@@ -1954,15 +1967,39 @@ hr.major {
   display: flex;
   text-align: center;
   justify-content: space-around;
-  margin: 0px 10px;
+  max-width: 100vw;
+}
+#interest-pics div {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: space-around;
+  width: 30vw;
 }
 #interest-list p {
   text-align: center;
 }
+#interest-pics div a img {
+  max-width: 100vw;
+  width: 100%;
+  margin: 0 auto;
+}
+
 @media screen and (max-width: 980px) {
   #interest-pics {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin: 0px 10px;
+    max-width: 100vw;
+  }
+  #interest-pics div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0px 10px;
+    width: 100%;
   }
 }
 
@@ -1974,8 +2011,9 @@ hr.major {
 }
 
 @media screen and (max-width: 480px) {
-  #bio section .content .inner a img {
-    width: 300px;
+  #bio .content .inner div a img {
+    width: 100vw;
+    margin: 0 auto;
   }
 }
 
